; ModuleID = '/home/carl/AnghaBench/zstd/contrib/linux-kernel/lib/zstd/extr_compress.c_ZSTD_noCompressBlock.c'
source_filename = "/home/carl/AnghaBench/zstd/contrib/linux-kernel/lib/zstd/extr_compress.c_ZSTD_noCompressBlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZSTD_blockHeaderSize = common dso_local global i64 0, align 8
@dstSize_tooSmall = common dso_local global i32 0, align 4
@bt_raw = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ZSTD_noCompressBlock(i8* %0, i64 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @ZSTD_blockHeaderSize, align 8
  %12 = add i64 %10, %11
  %13 = load i64, i64* %7, align 8
  %14 = icmp ugt i64 %12, %13
  br i1 %14, label %15, label %18

15:                                               ; preds = %4
  %16 = load i32, i32* @dstSize_tooSmall, align 4
  %17 = call i64 @ERROR(i32 %16)
  store i64 %17, i64* %5, align 8
  br label %35

18:                                               ; preds = %4
  %19 = load i8*, i8** %6, align 8
  %20 = bitcast i8* %19 to i32*
  %21 = load i64, i64* @ZSTD_blockHeaderSize, align 8
  %22 = getelementptr inbounds i32, i32* %20, i64 %21
  %23 = load i8*, i8** %8, align 8
  %24 = load i64, i64* %9, align 8
  %25 = call i32 @memcpy(i32* %22, i8* %23, i64 %24)
  %26 = load i8*, i8** %6, align 8
  %27 = load i64, i64* %9, align 8
  %28 = shl i64 %27, 2
  %29 = load i64, i64* @bt_raw, align 8
  %30 = add nsw i64 %28, %29
  %31 = call i32 @ZSTD_writeLE24(i8* %26, i64 %30)
  %32 = load i64, i64* @ZSTD_blockHeaderSize, align 8
  %33 = load i64, i64* %9, align 8
  %34 = add i64 %32, %33
  store i64 %34, i64* %5, align 8
  br label %35

35:                                               ; preds = %18, %15
  %36 = load i64, i64* %5, align 8
  ret i64 %36
}

declare dso_local i64 @ERROR(i32) #1

declare dso_local i32 @memcpy(i32*, i8*, i64) #1

declare dso_local i32 @ZSTD_writeLE24(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
